  lower cased tokens (words, number sequences, or punctuation) providing a well
  defined counting function that is faster than `term_count` but less flexible.

* `as_term_list` added.  This is a convenience function to convert a vector of
  terms or a quanteda `dictionary` into a named list.

* `combine_counts` added to enable combining `term_count` and `token_count`
  objects.

MINOR FEATURES

* `important_terms` picks up a plot method corresponding to the `frequent_terms`
  plot method.

IMPROVEMENTS

* `validate_model` now uses `classify` before validating to assign tags.

* `tag_co_occurrence` used a grid + base plotting approach that required
  restarting the graphics device between plots.  This dependency has been
  replaces with a dependency on **ggnetwork** for plotting networks as grid
  objects.

* `plot.validate_model` now shows tag counts in the sample to provide a relative
  importance of the accuracy in making decisions.

CHANGES

* `as_dtm` & `as_tdm` moved to the **gofastr** package where they can be used by
  other packages and their classed objects.  **termco** re-exports the two
  functions.


termco 0.4.0 - 0.4.3
----------------------------------------------------------------

NEW FEATURES

* `term_cols` & `group_cols` added to quickly grab just term or grouping
  variable columns.

* `as_dtm` & `as_tdm` added to convert a `term_count` object into a
  `tm::DocumentTermMatrix` or `tm::TermDocumentMatrix` object.

* `update_names` added to allow for safe renaming of a `term_count` object's
  columns while also updating its attributes as well.

IMPROVEMENTS

* `classify` picks up a new default `ties.method` type of `"probabilities"`.
  This used the probability distribution from all tags assigned to randomly
  break ties based on that distribution.

* `term_count` gets an auto-collapse feature for hierarchical `term.list`s with
  duplicate names.  A message is printed telling the user this is happening.  To