@@ -65,6 +65,7 @@ export(hierarchical_coverage_regex)
 export(hierarchical_coverage_term)
 export(important_terms)
 export(is.global)
+export(match_word)
 export(ngram_collocations)
 export(plot.tag_co_occurrence)
 export(plot_ca)
