@@ -59,6 +59,7 @@ Most of the functions *count*, *search*, *plot* terms, and *covert* between outp
 | `term_first`                 | count        | Frequency of words at the begining of strings     |
 | `colo`                       | search       | Regex output to find term collocations            |
 | `search_term`                | search       | Search for regex terms                            |
+" `match_word`                 | searh        | Extract words from a text matching a regular expression | 
 | `search_term_collocations`   | search       | Wrapper for `search_term` + `frequent_terms`      |
 | `classification_project`     | modeling     | Make a classification modeling project template   |
 | `as_dtm`/`as_tdm`            | modeling     | Coerce `term_count` object into `tm::DocumentTermMatrix`/`tm::TermDocumentMatrix` |
