@@ -45,6 +45,9 @@ NEW FEATURES
 * `combine_counts` added to enable combining `term_count` and `token_count`
   objects.
 
+* `match_word` added to match words to regular expressions.  Roughly equivalent
+  *qdap**'s `term_match`.
+
 MINOR FEATURES
 
 * `important_terms` picks up a plot method corresponding to the `frequent_terms`
